<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.exing.mabd_vendasapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_back_to_home_fragment"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_endereco"
        android:name="com.exing.mabd_vendasapp.ui.endereco.EnderecoFragment"
        android:label="@string/menu_endereco"
        tools:layout="@layout/fragment_endereco" />

    <fragment
        android:id="@+id/nav_cliente"
        android:name="com.exing.mabd_vendasapp.ui.cliente.ClienteFragment"
        android:label="@string/menu_cliente"
        tools:layout="@layout/fragment_cliente" />

    <fragment
        android:id="@+id/nav_vendedor"
        android:name="com.exing.mabd_vendasapp.ui.vendedor.VendedorFragment"
        android:label="@string/menu_vendedor"
        tools:layout="@layout/fragment_vendedor" />

    <fragment
        android:id="@+id/nav_categoria"
        android:name="com.exing.mabd_vendasapp.ui.categoria.CategoriaFragment"
        android:label="@string/menu_categoria"
        tools:layout="@layout/fragment_categoria" />

    <fragment
        android:id="@+id/nav_produto"
        android:name="com.exing.mabd_vendasapp.ui.produto.ProdutoFragment"
        android:label="@string/menu_produto"
        tools:layout="@layout/fragment_produto" />

    <fragment
        android:id="@+id/nav_carrinho"
        android:name="com.exing.mabd_vendasapp.ui.carrinho.CarrinhoFragment"
        android:label="@string/menu_carrinho"
        tools:layout="@layout/fragment_carrinho" />

    <fragment
        android:id="@+id/nav_test"
        android:name="com.exing.mabd_vendasapp.ui.test.TestFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_test" />

</navigation>